2007-04-06  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.
        
        Layout tests for <rdar://problem/5112273> REGRESSION(TOT): Reproducible 
        crash loading an old version of amazon.com as a web archive

        * fast/dom/null-document-location-assign-crash-expected.txt: Added.
        * fast/dom/null-document-location-assign-crash.html: Added.
        * fast/dom/null-document-location-href-put-crash-expected.txt: Added.
        * fast/dom/null-document-location-href-put-crash.html: Added.
        * fast/dom/null-document-location-put-crash-expected.txt: Added.
        * fast/dom/null-document-location-put-crash.html: Added.
        * fast/dom/null-document-location-replace-crash-expected.txt: Added.
        * fast/dom/null-document-location-replace-crash.html: Added.
        * fast/dom/null-document-window-open-crash-expected.txt: Added.
        * fast/dom/null-document-window-open-crash.html: Added.

2007-04-06  Adam Roben  <aroben@apple.com>

        Reviewed by Adele.

        These two editing tests were using the wrong case for
        dumpEditingCallbacks, which meant that they were falling into DRT's
        invokeUndefinedMethodFromWebScript instead of actually turning on the
        callback dumping.
        
        This patch fixes the case of the call and updates the results.

        * editing/execCommand/4641880-1-expected.txt:
        * editing/execCommand/4641880-1.html:
        * editing/execCommand/4641880-2-expected.txt:
        * editing/execCommand/4641880-2.html:

2007-04-06  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by john
        
        <rdar://problem/5115601> 
        REGRESSION: Crash deleting a selection that starts in an editable table cell

        * editing/deleting/5115601-expected.checksum: Added.
        * editing/deleting/5115601-expected.png: Added.
        * editing/deleting/5115601-expected.txt: Added.
        * editing/deleting/5115601.html: Added.
