@@ -1,3 +1,13 @@
+2007-04-06  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Beth Dakin.
+        
+        Fixed one more case of <rdar://problem/5112273> REGRESSION(TOT): 
+        Reproducible crash loading an old version of amazon.com as a web archive
+
+        * bindings/js/JSXMLHttpRequest.cpp:
+        (KJS::JSXMLHttpRequestPrototypeFunction::callAsFunction):
+
 2007-04-06  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Adam.
